# StreamGen

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codemeta.json  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: dependabot-auto-merge.yml  draft-pdf.yaml  python-package-macos.yaml  python-package-ubuntu.yaml  python-package-windows.yaml  python-package.yaml
.jupyter/: cfg.py
CHANGELOG/: index.html
CONTRIBUTING/: index.html
changelog/: 10.added  11.added  2.bug  3.misc  4.removed  7.misc  8.misc  9.added
docs/: .gitignore  creating_streams.md  developer_guide.md  motivation_and_history.md  paper.bib  paper.jats  paper.md  project_structure.md  testing.md
docs/artwork/: README.md  index.html
docs/developer_guide/: index.html
docs/jats/: paper.jats
docs/motivation_and_history/: index.html
docs/paper/: index.html
docs/project_structure/: index.html
docs/testing/: index.html
examples/: .gitignore  perlin_numpy.py  tree.dot  wafer_map_generation.ipynb  wafer_map_scratch_generation.ipynb
examples/data/: Donut.parquet  Near-full.parquet  Random.parquet  Scratch.parquet
examples/time series classification/: 01-static-distributions.ipynb  01_static_distributions.ipynb  02-data-streams.ipynb  02_data_streams.ipynb  03_drift_scenarios.ipynb  04-multi-label-generation.ipynb  multi_label_tree_1.dot  multi_label_tree_2.dot  multi_label_tree_3.dot  tree.dot  tree_with_samples.dot
examples/time series classification/01-static-distributions/: index.html
examples/time series classification/01-static-distributions-files/: tree.dot  tree_with_samples.dot
examples/time series classification/02-data-streams/: index.html
examples/time series classification/03-drift-scenarios/: index.html
examples/time series classification/04-multi-label-generation/: index.html
examples/wafer_map_generation/: index.html
examples/wafer_map_scratch_generation/: index.html
reference/streamgen/: index.html
reference/streamgen/enums/: index.html
reference/streamgen/exceptions/: index.html
reference/streamgen/nodes/: index.html
reference/streamgen/parameter/: index.html
reference/streamgen/samplers/: index.html
reference/streamgen/streams/: index.html
reference/streamgen/transforms/: index.html
streamgen/: __init__.py  enums.py  exceptions.py  nodes.py  streams.py  transforms.py  visualizations.py
streamgen/parameter/: __init__.py  store.py  visualizations.py
streamgen/samplers/: __init__.py  tree.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  nodes_test.py  parameter_test.py  parameterstore_test.py  samplingtree_rng_test.py  samplingtree_test.py  streamgen_branch_update_regression_test.py  streams_test.py  transforms_test.py  visualizations_test.py
(+3 files in other folders)
