[tool.poetry]
name = "streamgen"
version = "0.0.1"
description = "Framework for simulating stream datasets"
authors = ["Laurenz Farthofer <laurenz@hey.com>"]
packages = [{ include = "streamgen" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
