[tool.poetry]
name = "streamgen"
version = "0.0.1"
description = "Framework for simulating data streams."
authors = ["Laurenz Farthofer <laurenz@hey.com>"]
packages = [{ include = "streamgen" }]
readme = "README.md"

[tool.poe.tasks]
test = "coverage run --source=streamgen -m pytest -vv --durations=8"

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.12.1"
beartype = "^0.17.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.1"
loguru = "^0.7.2"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"
coverage = "^7.4.3"
pre-commit = "^3.6.2"
poethepoet = "^0.25.0"

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".tox", ".venv", "__pypackages__", "dist", "venv"]
line-length = 140
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "D211",
    "D213",
    "EXE003",
    "TCH003",
    "TD002",
    "PD901",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
